# Credit-Scoring-End-to-End-MLOps-Pipeline

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
api/: app.py  config.py  predict.py  schemas.py
artifacts/: feature_names.json  model.pkl  model_metadata.json  scaler.pkl
notebooks/: 01_EDA.ipynb  02_preprocessing_and_feature_engineering.ipynb  03_modeling_with_MLFLOW.ipynb
notebooks/charts_eda/: guide_graphiques_eda.md
scripts/: export_model.py
tests/: conftest.py  test_api.py  test_predict.py
tests/fixtures/: sample_client.json
